<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/achievement_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        android:contentDescription="@string/achievements"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/trophy_white" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:text="@string/app_name"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/resume_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/resume"
        android:textSize="22sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/difficulty_btns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/new_game_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/new_game"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/resume_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/difficulty_btns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_corners"
        android:checkedButton="@id/medium_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/beginner_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_btns"
            android:backgroundTintMode="src_over"
            android:button="@null"
            android:paddingStart="12dp"
            android:paddingLeft="12dp"
            android:paddingEnd="12dp"
            android:paddingRight="12dp"
            android:text="@string/beginner_difficulty"
            android:textAlignment="center"
            android:textColor="@drawable/radio_btns_text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/easy_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_btns"
            android:button="@null"
            android:text="@string/easy_difficulty"
            android:textAlignment="center"
            android:textColor="@drawable/radio_btns_text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/medium_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_btns"
            android:button="@null"
            android:text="@string/medium_difficulty"
            android:textAlignment="center"
            android:textColor="@drawable/radio_btns_text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/hard_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_btns"
            android:button="@null"
            android:text="@string/hard_difficulty"
            android:textAlignment="center"
            android:textColor="@drawable/radio_btns_text"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/expert_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_btns"
            android:button="@null"
            android:text="@string/expert_difficulty"
            android:textAlignment="center"
            android:textColor="@drawable/radio_btns_text"
            android:textSize="16sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>