<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/achievement_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_launcher_background"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/achievement_title"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/achievement_icon"
        android:text="@string/achievement_title" />

    <TextView
        android:id="@+id/achievement_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/achievement_title"
        android:layout_alignStart="@+id/achievement_title"
        android:layout_marginStart="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/description" />

</RelativeLayout>